examples/spork/failing/conflicting_class_visibility/Expected.java
<<<<<<< LEFT
public static class Cls {}
||||||| BASE
static class Cls {}
=======
private static class Cls {}
>>>>>>> RIGHT
